# pydantic-app-config

./: README.md  pyproject.toml
pydantic_app_config/: __init__.py  config.py  registry.py  secret.py
