[project]
name = "pydantic-app-config"
version = "1.0.1"
description = "Pydantic based application configuration"
authors = [
    {name = "Yury Sokov (Yurzs)", email = "me@yurzs.dev"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = ["Development Status :: 4 - Beta"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
